style.css
:root{
    --alt-bg: hsl(0, 0%, 9%);
}

*{
    margin: 0;
    -webkit-box-sizing: border-box;
            box-sizing: border-box;
}

body{
    background: black;
    color: hsl(0, 0%, 90%);
    font-family: 'RobotoRegular';
    width: 100%;
    height: 100vh;
}

a{
    color: currentColor;
    font-weight: bold;
}

button{
    color: currentColor;
    background: var(--alt-bg);
    border: 2px solid transparent;
    padding: .4rem .2rem;
}

button:hover{
    background: var(--alt-bg);
    border: 2px solid hsl(0, 0%, 17%);
}

/* LOGIN */
.login-section, .mobile{
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
        -ms-flex-direction: column;
            flex-direction: column;
    -webkit-box-align: center;
        -ms-flex-align: center;
            align-items: center;
    -webkit-box-pack: center;
        -ms-flex-pack: center;
            justify-content: center;
    text-align: center;
    width: 100%;
    height: 100vh;
    z-index: 98;
}

.logo, .name{
    font-family: Arial, Helvetica, sans-serif;
}

.logo{
    color: red;
    font-size: 5rem;
    margin-bottom: 3rem;
}

.name{
    font-size: 3.5rem;
    text-transform: uppercase;
}

.login-form {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
        -ms-flex-direction: column;
            flex-direction: column;
    gap: 1rem;
    margin-top: 3rem;
}

.login-put{
    width: 400px;
}

.login-put, .input-bar {
    border: 2px solid transparent;
    background: var(--alt-bg);
    color: currentColor;
    font-size: 1rem;
    outline: none;
    line-height: 200%;
    padding-left: 0.5rem;
}

.login-put:focus{
    border: 2px solid hsl(0, 0%, 16%);
}

.credits{
    position: absolute;
    bottom: 20px;
}

/* APP */
main{
    width: 100%;
    height: 100%;
    display: none;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
        -ms-flex-direction: column;
            flex-direction: column;
    -webkit-box-pack: justify;
        -ms-flex-pack: justify;
            justify-content: space-between;
    -webkit-box-flex: 1;
        -ms-flex: auto;
            flex: auto;
    overflow: auto;
    z-index: 10;
}

header{
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-align: center;
        -ms-flex-align: center;
            align-items: center;
    -webkit-box-pack: justify;
        -ms-flex-pack: justify;
            justify-content: space-between;
    gap: 1rem;
    padding: .7rem;
}

header .left{
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-align: center;
        -ms-flex-align: center;
            align-items: center;
    gap: 1rem;
}

header .left select{
    background: transparent;
    border: none;
    color: currentColor;
    padding: .2rem .5rem;
    font-size: 1.2em;
}

header details summary{
    color: hsl(0,0%,45%);
    cursor: default;
    -webkit-user-select: none;
       -moz-user-select: none;
        -ms-user-select: none;
            user-select: none;
}

header .right .status{
    color: red;
}
header .right button {
    background: transparent;
}

.channelDesc{
    width: 100%;
    background: black;
    padding: 1rem;
    position: absolute;
    left: 0;
}

.msg-content{
    color: hsl(0, 0%, 65%);
    word-wrap: anywhere;
}

.author {
    color: hsl(0, 0%, 90%);
    padding-top: 10px;
}

.replymsg {
    display: block;
    width: 700px;
    font-size: smaller;
    font-style: italic;
    overflow: hidden;
    -o-text-overflow: ellipsis;
       text-overflow: ellipsis;
    white-space: nowrap;
}

#closereply {
    display: none
}

#messages {
    font-size: 1em;
    overflow: auto;
    -webkit-backface-visibility: hidden;
            backface-visibility: hidden;
    padding: 1rem 2rem;
    -webkit-box-flex: 1;
        -ms-flex: auto;
            flex: auto;
}

#messagebar{
    width: 100%;
    display:-webkit-box;
    display:-ms-flexbox;
    display:flex;
}

.input-bar{
    -webkit-box-flex: 1;
        -ms-flex: auto;
            flex: auto;
    padding: 0.7rem 0;
}

.inputfile-label{
    display: -ms-grid;
    display: grid;
    place-content: center;
    padding: 0 1rem;
    background: var(--alt-bg);
    color: currentColor;
    font-size: 1.7em;
    cursor: pointer;
}

.inputfile {
    width: 0.1px;
    height: 0.1px;
    opacity: 0;
    overflow: hidden;
    position: absolute;
    z-index: -1;
}

img {
    max-width: 600px;
}

.file-count{
    background: var(--alt-bg);
    display: none;
    padding: .3rem;
}

.file-count .cancel{
    padding: 0;
    background: none;
    padding: 0 0.9rem;
}

.replying-cont{
    display: none;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
        -ms-flex-direction: column;
            flex-direction: column;
    background: var(--alt-bg);
    padding: .3rem;
}

.replying{
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-orient: horizontal;
    -webkit-box-direction: normal;
        -ms-flex-direction: row;
            flex-direction: row;
    -webkit-box-align: center;
        -ms-flex-align: center;
            align-items: center;
}

.cancel-reply{
    padding: 0 0.9rem;
}

/* FIREWALL */
.firewall, .nightwall{
    width: 100%;
    height: 100vh;
    position: absolute;
    display: none;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
        -ms-flex-direction: column;
            flex-direction: column;
    -webkit-box-align: center;
        -ms-flex-align: center;
            align-items: center;
    -webkit-box-pack: center;
        -ms-flex-pack: center;
            justify-content: center;
    background: black;
    text-align: center;
    z-index: 97;
}

.nightwall{
    z-index: 99;
}

.content{
    opacity: 0;
    pointer-events: none;
    -webkit-transition: .5s;
    -o-transition: .5s;
    transition: .5s;
}

.firewall:hover > .content,
.nightwall:hover > .content{
    opacity: 1;
}

/* MOBILE */
.mobile{
    display: none;
}

@media screen and (max-width: 750px) {
    .mobile{display: -webkit-box;display: -ms-flexbox;display: flex;}
    .firewall, .login-section, #logged {display: none !important;}
}

